<resources>
   <string name="app_name">TOKOH  HEBAT DI ISLAM</string>
   <string name="deskripsi">deskripsi\n</string>
   <string name="tokohislam_name">Tokoh Islam\n</string>
   <string name="list">List</string>
   <string name="grid">Grid</string>
   <string name="about_title">Tentang diri\n</string>
   <string name="nama">MUHAMMAD FAISHOL WIJANARKO</string>
   <string name="schoolname">UNIVERSITAS ESA UNGGUL</string>
   <string name="jurusan">Jurusan Ilmu Komputer</string>
   <string name="version">"Version 0.1  "</string>
   <string-array name="ulama_names">
      <item>Imam Syafi`e</item>
      <item>Imam Ahmad Ibn Hajar Al-Asqalani</item>
      <item>Imam Nawawi</item>
      <item>Imam Al-Qurtubi</item>
      <item>Imam Ibn Hajar Al-Haitami</item>
      <item>Imam Al-Hujjah Zakariyya Al-Ansari</item>
      <item>Imam Abu Bakar Baqilani</item>
      <item>Imam Nasafi</item>
      <item>Imam Syarbini</item>
      <item>Abu Hayyan al-Nahwi</item>
      <item>Syeikh Ali Gomaa, Grand Mufti Mesir</item>
      <item>Imam maliki</item>
   </string-array>
</resources>