<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools">

   <item
      android:id="@+id/menu_about"
      android:icon="@drawable/baseline_account_circle_24"
      android:title="@string/about_title"
      app:showAsAction="ifRoom" />

   <item
      android:id="@+id/action_share"
      android:title="Share"
      app:showAsAction="ifRoom"
      android:icon="@drawable/baseline_share_24"
   android:orderInCategory="100" />

   <item
      android:id="@+id/action_list"
      android:title="@string/list"
      app:showAsAction="never" />

   <item
      android:id="@+id/action_grid"
      android:title="@string/grid"
      app:showAsAction="never" />


</menu>