<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/bg1"
   android:gravity="center"
   android:orientation="vertical"
   android:padding="16dp">

   <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/ivProfilePhoto"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:contentDescription="Profile Photo"
      android:src="@drawable/fotoprofil"
      app:civ_border_color="@color/color1"
      app:civ_border_width="5dp"
      app:layout_constraintTop_toBottomOf="@+id/elementLain"
      app:layout_constraintTop_toTopOf="parent" />

   <TextView
      android:id="@+id/tvAboutTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/about_title"
      android:textSize="24sp"
      android:textStyle="bold" />

   <TextView
      android:id="@+id/tvProfileName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/nama"
      android:textSize="18sp" />

   <TextView
      android:id="@+id/tvSchoolName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/schoolname"
      android:textSize="18sp" />

   <TextView
      android:id="@+id/tvJurusan"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/jurusan"
      android:textSize="18sp" />



   <Button
      android:id="@+id/btnSocialMedia"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:background="@drawable/rounded_button"
      android:padding="20dp"
      android:text="Kunjungi Sosial Media"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:textStyle="bold" />

</LinearLayout>
